<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:minHeight="50dp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/delete_sure"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_checkBox_text"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/base_selected"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/main_checkBox_text"
            android:textSize="13sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/base_selected"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/main_checkBox_text"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>