<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#f5f5f5"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/loading" />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/neterror_load"
        android:textColor="@color/black"
        android:textSize="@dimen/home_category_tx" />

    <ImageView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/errorview"
        android:visibility="gone" />

    <Button
        android:id="@+id/reflesh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/reloadbutton"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reload"
        android:textColor="@color/white"
        android:textSize="@dimen/home_category_tx"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/nodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/nodata"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nodataTX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/nodata"
        android:textColor="@color/black"
        android:textSize="@dimen/home_category_tx"
        android:visibility="gone" />

    <Button
        android:id="@+id/gohome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/reloadbutton"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/gohome"
        android:textColor="@color/white"
        android:textSize="@dimen/home_category_tx"
        android:visibility="gone" />

</LinearLayout>