<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_qian">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/my" />

    <RelativeLayout
        android:id="@+id/relativeLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_title"
        android:layout_marginTop="1dp">

        <EditText
            android:id="@+id/editText_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_toEndOf="@+id/imageView5"
            android:layout_toRightOf="@+id/imageView5"
            android:background="@null"
            android:hint="@string/acc"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/img_acc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout12"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/editText_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imageView6"
            android:layout_toRightOf="@+id/imageView6"
            android:background="@null"
            android:hint="@string/pswd"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/img_pswd" />

        <TextView
            android:id="@+id/forget_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editText_pswd"
            android:layout_alignRight="@+id/editText_pswd"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/forgetpswd"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout13"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/btn_login"
        android:text="@string/login"
        android:textColor="@color/color_white" />

    <Button
        android:id="@+id/btn_phone_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@mipmap/btn_register"
        android:text="@string/phoneregister" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_below="@+id/btn_phone_register"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/color_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_phone_register"
            android:layout_centerHorizontal="true"
            android:text="@string/morelogin" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/color_gray" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imt_weixin"
        android:layout_toLeftOf="@+id/imt_weixin"
        android:layout_toStartOf="@+id/imt_weixin"
        android:src="@mipmap/qq" />

    <ImageView
        android:id="@+id/img_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imt_weixin"
        android:layout_toEndOf="@+id/imt_weixin"
        android:layout_toRightOf="@+id/imt_weixin"
        android:src="@mipmap/weibo" />

    <ImageView
        android:id="@+id/imt_weixin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/weixin" />
</RelativeLayout>