<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/updateBuyCount"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/main_checkBox_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="100dp"
        android:minWidth="160dp"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@mipmap/minus" />

        <EditText
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/buy_edit"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:maxLength="6"
            android:minWidth="20dp"
            android:selectAllOnFocus="true"
            android:text="10"
            android:textColor="@color/buy_count"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@mipmap/add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_checkBox_text"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/base_selected"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/main_checkBox_text"
            android:textSize="13sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/base_selected"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/main_checkBox_text"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>